<?xml version="1.0"?>
<package format="3">
  <name>traffic_light_monitor</name>
  <version>0.0.1</version>
  <description>Jelzőlámpa package</description>
  <maintainer email="ludmankevin@gmail.com">ajr</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
